--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "express-basic-auth": "^1.2.1",
     "mongoose": "^6.4.6",
     "nodemon": "^2.0.19"
   },
